--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,3 +31,21 @@
     border-color: white transparent transparent transparent;
     border-style: solid;
 }
+
+.dropdown-menu-arrow::before {
+    content: "";
+    position: absolute;
+    top: -5px   ;
+    left: calc(95% - 5%);
+    border-width: 0px 5px 5px 5px;
+    border-color:  transparent transparent white transparent;
+    border-style: solid;
+}
+
+.menu-item {
+    @apply block px-4 py-2 text-sm text-white font-brand font-regular
+}
+
+.menu-item:hover {
+    @apply hover:text-emDark-light
+}
