phx-click-away add

--- a/lib/code_snippet_share_manager_web/components/layouts/app.html.heex
+++ b/lib/code_snippet_share_manager_web/components/layouts/app.html.heex
@@ -22,6 +22,8 @@
       <img src="/images/user-image.svg" alt="Profile Image" class="round-img-padding w-8 h-8" />
     </button>
     <div
+
+      phx-click-away={ CodeSnippetShareManagerWeb.Layouts.App.toggle_dropdown_menu() } 
       id="dropdown_menu"
       class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-48 bg-emDark rounded-lg shadow-xl border border-white"
       hidden="true"
