--- a/lib/code_snippet_share_manager_web/components/layouts/app.html.heex
+++ b/lib/code_snippet_share_manager_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <header class="flex justify-between items-center px-6 py-3 bg-emDark ">
   <div class="flex relative">
     <a href={~p"/"}>
-      <img src="/images/gist-logo.svg" alt="logo" class="h-8 w-auto" />
+      <img src="/images/logo.svg" alt="logo" class="h-8 w-auto" />
     </a>
     <a href={~p"/"}>
       <div class="test-white font-brand font-bold text-3xl mx-2 ">Gist</div>
@@ -28,7 +28,7 @@
       class="dropdown-menu-arrow absolute right-0 mt-2 py-2 w-48 bg-emDark rounded-lg shadow-xl border border-white"
       hidden="true"
     >
-      <%= if false do %>
+      <%= if @current_user do %>
         <.link
           href={~p"/users/settings"}
           class="menu-item border-b border-white border-opacity-50"
@@ -98,9 +98,17 @@
 <.flash_group flash={@flash} />
 <%= @inner_content %>
 </main>
-<%!-- <main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
-    <.flash_group flash={@flash} />
-    <%= @inner_content %>
+<footer class="h-[120px] w-full flex justify-center text-white px-16 py-20 font-brand font-regular text-xs">
+  <div class="w-full px-10">
+    <div class="border-t-[1px] border-white w-full"></div>
+    <div class="flex items-center space-x-2 py-6">
+      <img src="/images/logo.svg" alt="Elixir Mentor Logo" class="h-8 w-8 " />
+      <p class="text-emYellow-light">© <%= DateTime.utc_now.year %> Rashed Afridi</p>
+      <div class="text-emOrange-dark px-4 space-x-2">
+        <a href={~p"/"} class="hover:underline">Terms</a>
+        <a href={~p"/"} class="hover:underline">Privacy</a>
+        <a href={~p"/"} class="hover:underline">About</a>
+      </div>
+    </div>
   </div>
-</main> --%>
+</footer>
